# webterm

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  rest_server.c  wifi_manager.c
main/include/: main.h  rest_server.h  wifi_manager.h
www/: README.md
www/frontend/: README.md  index.html  package-lock.json  package.json
www/frontend/src/: App.svelte  app.css
www/frontend/src/lib/shell/: LICENSE.md  jsShell.js
